update LeetCode Biweekly Contest 162

--- a/algorithm/LeetCode/[Hard] 2106. Maximum Fruits Harvested After at Most K Steps.md
+++ b/algorithm/LeetCode/[Hard] 2106. Maximum Fruits Harvested After at Most K Steps.md
@@ -58,7 +58,7 @@ You can move at most k = 2 steps and cannot reach any position with fruits.
 
 # Submissions
 ---
-**Solution 1: (Sliding Window, Greedy)**
+**Solution 1: (Sliding Window, Greedy, left and right, at most wind once)**
 ```
 Runtime: 296 ms
 Memory: 120.5 MB
@@ -76,6 +76,115 @@ public:
             max_sum = max(max_sum, sum);
         }
         return max_sum;
+    }
+};
+```
+
+**Solution 2: (Binary Search)**
+```
+Runtime: 97 ms, Beats 28.94%
+Memory: 128.42 MB, Beats 51.06%
+```
+```c++
+class Solution {
+public:
+    int maxTotalFruits(vector<vector<int>>& fruits, int startPos, int k) {
+        int n = fruits.size();
+        vector<int> sum(n + 1);
+        vector<int> indices(n);
+        for (int i = 0; i < n; i++) {
+            sum[i + 1] = sum[i] + fruits[i][1];
+            indices[i] = fruits[i][0];
+        }
+        int ans = 0;
+        for (int x = 0; x <= k / 2; x++) {
+            /* move left x steps, then move right k - x steps. */
+            int y = k - 2 * x;
+            int left = startPos - x;
+            int right = startPos + y;
+            int start = lower_bound(indices.begin(), indices.end(), left) -
+                        indices.begin();
+            int end = upper_bound(indices.begin(), indices.end(), right) -
+                      indices.begin();
+            ans = max(ans, sum[end] - sum[start]);
+            /* move right x steps, then move left k - x steps. */
+            y = k - 2 * x;
+            left = startPos - y;
+            right = startPos + x;
+            start = lower_bound(indices.begin(), indices.end(), left) -
+                    indices.begin();
+            end = upper_bound(indices.begin(), indices.end(), right) -
+                  indices.begin();
+            ans = max(ans, sum[end] - sum[start]);
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 3: (Sliding Window)**
+```
+Runtime: 12 ms, Beats 53.62%
+Memory: 124.45 MB, Beats 84.68%
+```
+```c++
+class Solution {
+public:
+    int maxTotalFruits(vector<vector<int>>& fruits, int startPos, int k) {
+        int left = 0;
+        int right = 0;
+        int n = fruits.size();
+        int sum = 0;
+        int ans = 0;
+
+        auto step = [&](int left, int right) -> int {
+            if (fruits[right][0] <= startPos) {
+                return startPos - fruits[left][0];
+            } else if (fruits[left][0] >= startPos) {
+                return fruits[right][0] - startPos;
+            } else {
+                return min(abs(startPos - fruits[right][0]),
+                           abs(startPos - fruits[left][0])) +
+                       fruits[right][0] - fruits[left][0];
+            }
+        };
+        // each time fix the right boundary of the window
+        while (right < n) {
+            sum += fruits[right][1];
+            // move left boundary
+            while (left <= right && step(left, right) > k) {
+                sum -= fruits[left][1];
+                left++;
+            }
+            ans = max(ans, sum);
+            right++;
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 4: (Sliding Window, left and right, at most wind once, try all solution)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 124.48 MB, Beats 84.68%
+```
+```c++
+class Solution {
+public:
+    int maxTotalFruits(vector<vector<int>>& fruits, int startPos, int k) {
+        auto it = lower_bound(begin(fruits), end(fruits), vector<int>{startPos - k});
+        int a = 0, ans = 0;
+        for (auto rit = it; rit != end(fruits) && (*rit)[0] <= startPos + k; rit ++) {
+            a += (*rit)[1];
+            while (min(startPos + (*rit)[0] - 2 * (*it)[0], 2 * (*rit)[0] - (*it)[0] - startPos) > k) {
+                a -= (*it)[1];
+                it ++;
+            }
+            ans = max(ans, a);
+        }
+        return ans;
+
     }
 };
 ```
