--- a/algorithm/LeetCode/[Hard] 2561. Rearranging Fruits.md
+++ b/algorithm/LeetCode/[Hard] 2561. Rearranging Fruits.md
@@ -32,7 +32,7 @@ Explanation: It can be shown that it is impossible to make both the baskets equa
 
 # Submissions
 ---
-**Solution 1: ()**
+**Solution 1: (Counter)**
 
 We count occurrences of each value in an ordered map.
 
@@ -77,6 +77,77 @@ public:
             swaps -= take;
         }
         return res;
+    }
+};
+```
+
+**Solution 2: (Counter)**
+
+    x + + x
+    2 2 2 4
+    1 1 2 4
+    - - x x
+    ^
+cnt
+    1:-2  <
+    2:2
+    4:0
+dp
+    1 2
+    ---
+
+              6
+      9       2
+    + + x x + + x
+    2 2 5 5 8 8 4
+    5 5 6 6 9 9 4
+    x x - - - - x
+          2   2
+              8
+cnt
+    2:2
+    8:2
+    6:-2
+    9:-2
+    4:0
+    5:0
+dp
+    2 6 8 9
+    ^ ^
+
+```
+Runtime: 47 ms, Beats 62.07%
+Memory: 90.00 MB, Beats 65.52%
+```
+```c++
+class Solution {
+public:
+    long long minCost(vector<int>& basket1, vector<int>& basket2) {
+        int n = basket1.size(), i, mn = INT_MAX;
+        unordered_map<int,int> cnt;
+        vector<int> dp;
+        sort(basket1.begin(), basket1.end());
+        sort(basket2.begin(), basket2.end());
+        for (auto &b: basket1) {
+            cnt[b] += 1;
+            mn = min(mn, b);
+        }
+        for (auto &b: basket2) {
+            cnt[b] -= 1;
+            mn = min(mn, b);
+        }
+        for (auto &[k, c]: cnt) {
+            if (c%2) {
+                return -1;
+            }
+            for (i = 0; i < abs(c)/2; i ++) {
+                dp.push_back(k);
+            }
+        }
+        nth_element(dp.begin(), dp.begin() + dp.size()/2, dp.end());
+        return accumulate(dp.begin(), dp.begin() + dp.size()/2, 0LL, [&](long long rst, int &a){
+            return rst + min(2*mn ,a);
+        });
     }
 };
 ```
