--- a/algorithm/LeetCode/[Hard] 1074. Number of Submatrices That Sum to Target.md
+++ b/algorithm/LeetCode/[Hard] 1074. Number of Submatrices That Sum to Target.md
@@ -113,8 +113,8 @@ class Solution:
 1. For each pair of column find the subarrays sum eqaul to target.
 
 ```
-Runtime: 361 ms
-Memory: 99.10 MB
+Runtime: 373 ms, Beats 92.56%
+Memory: 99.13 MB, Beats 83.41%
 ```
 ```c++
 class Solution {
@@ -147,6 +147,47 @@ public:
             }
         }
         return count;
+    }
+};
+```
+
+**Solution 4: (Hash Table, Prefix Sum on each pair of column, for every column pair try every row)**
+
+        vj  vj2
+  i>. . x x x
+    . . x x x
+    . . x x x
+              ^pre[j2+1]
+        ^pre[j]
+
+```
+Runtime: 371 ms, Beats 92.67%
+Memory: 99.23 MB, Beats 82.97%
+```
+```c++
+class Solution {
+public:
+    int numSubmatrixSumTarget(vector<vector<int>>& matrix, int target) {
+        int m = matrix.size(), n = matrix[0].size(), i, j, j2, a, ans = 0;
+        unordered_map<int, int> cnt;
+        for (i = 0; i < m; i ++) {
+            for (j = 1; j < n; j ++) {
+                matrix[i][j] += matrix[i][j-1];
+            }
+        }
+        for (j = 0; j < n; j ++) {
+            for (j2 = j; j2 < n; j2 ++) {
+                cnt[0] = 1;
+                a = 0;
+                for (i = 0; i < m; i ++) {
+                    a += matrix[i][j2] - (j ? matrix[i][j-1] : 0);
+                    ans += cnt.count(a - target) ? cnt[a - target] : 0;
+                    cnt[a] += 1;
+                }
+                cnt.clear();
+            }
+        }
+        return ans;
     }
 };
 ```
