--- a/algorithm/LeetCode/[Easy] 3477. Fruits Into Baskets II.md
+++ b/algorithm/LeetCode/[Easy] 3477. Fruits Into Baskets II.md
@@ -51,26 +51,25 @@ Since all fruits are successfully placed, we return 0.
 ---
 **Solution 1: (Brute Force)**
 ```
-Runtime: 3 ms, Beats 66.67%
-Memory: 48.90 MB, Beats 80.00%
+Runtime: 0 ms, Beats 100.00%
+Memory: 48.84 MB, Beats 75.84%
 ```
 ```c++
 class Solution {
 public:
     int numOfUnplacedFruits(vector<int>& fruits, vector<int>& baskets) {
-        int m = fruits.size(), n = baskets.size(), i, j, ans = 0;
-        vector<bool> visited(n);
+        int n = fruits.size(), i, j, ans = 0;
         bool flag;
-        for (i = 0; i < m; i ++) {
-            flag = false;
+        for (i = 0; i < n; i ++) {
+            flag = true;
             for (j = 0; j < n; j ++) {
-                if (!visited[j] && baskets[j] >= fruits[i]) {
-                    visited[j] = true;
-                    flag = true;
+                if (baskets[j] >= fruits[i]) {
+                    baskets[j] = -1;
+                    flag = false;
                     break;
                 }
             }
-            if (!flag) {
+            if (flag) {
                 ans += 1;
             }
         }
