--- a/algorithm/LeetCode/[Hard] 1312. Minimum Insertion Steps to Make a String Palindrome.md
+++ b/algorithm/LeetCode/[Hard] 1312. Minimum Insertion Steps to Make a String Palindrome.md
@@ -123,25 +123,30 @@ class Solution:
 
 **Solution 3: (DP Bottom-Up)**
 ```
-Runtime: 43 ms
-Memory: 28.6 MB
+Runtime: 22 ms, Beats 80.29%
+Memory: 31.50 MB, Beats 37.12%
 ```
 ```c++
 class Solution {
 public:
     int minInsertions(string s) {
-        int n = s.size();
-        vector<vector<int>> dp(n + 1, vector<int>(n + 1, 0));
-        for (int k = 1; k < n; k++) {
-            for (int i = 0; i < n - k; i++) {
-                if (s[i + k] == s[i]) {
-                    dp[i][i + k] = dp[i + 1][i + k - 1];
+        int n = s.size(), i, k;
+        vector<vector<int>> dp(n, vector<int>(n));
+        for (i = 0; i < n-1; i ++) {
+            if (s[i] != s[i+1]) {
+                dp[i][i+1] = 1;
+            }
+        }
+        for (k = 3; k <= n; k ++) {
+            for (i = 0; i <= n-k; i ++) {
+                if (s[i] == s[i+k-1]) {
+                    dp[i][i+k-1] = dp[i+1][i+k-2];
                 } else {
-                    dp[i][i + k] = min(dp[i + 1][(i+1) + (k-1)], dp[i][i + k - 1]) + 1;
+                    dp[i][i+k-1] = min(dp[i+1][i+k-1], dp[i][i+k-2]) + 1;
                 }
             }
         }
-        return dp[0][n - 1];
+        return dp[0][n-1];
     }
 };
 ```
