update LeetCode Biweekly Contest 163

--- a/algorithm/LeetCode/[Easy] 2264. Largest 3-Same-Digit Number in String.md
+++ b/algorithm/LeetCode/[Easy] 2264. Largest 3-Same-Digit Number in String.md
@@ -70,3 +70,24 @@ public:
     }
 };
 ```
+
+**Solution 3: (String)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 9.01 MB, Beats 52.45%
+```
+```c++
+class Solution {
+public:
+    string largestGoodInteger(string num) {
+        int n = num.size(), i;
+        char mx = 0;
+        for (i = 0; i < n-2; i ++) {
+            if (num[i] == num[i+1] && num[i+1] == num[i+2]) {
+                mx = max(mx, num[i]);
+            }
+        }
+        return mx == 0 ? "" : string(3, mx);
+    }
+};
+```
