--- a/algorithm/LeetCode/[Easy] 1323. Maximum 69 Number.md
+++ b/algorithm/LeetCode/[Easy] 1323. Maximum 69 Number.md
@@ -77,3 +77,59 @@ class Solution:
         # otherwise, increment 'num' by the difference made by the first '6'.
         return num if index_first_six == -1 else num + 3 * 10 ** index_first_six
 ```
+
+**Solution 3: (String)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 7.94 MB, Beats 71.54%
+```
+```c++
+class Solution {
+public:
+    int maximum69Number (int num) {
+        string s = to_string(num);
+        for (int i = 0; i < s.length(); i ++) {
+            if (s[i] == '6') {
+                s[i] = '9';
+                break;
+            }
+        }
+        return stoi(s);
+    }
+};
+```
+
+**Solution 4: (Math)**
+
+         v
+       9 6 6 9
+r      9 6 6 9
+b      1 0 0 0
+         6 6 9
+         1 0 0 
+
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 8.06 MB, Beats 41.82%
+```
+```c++
+class Solution {
+public:
+    int maximum69Number (int num) {
+        int b = 1, r, ans = num;
+        while (b*10 < num) {
+            b *= 10;
+        }
+        r = num;
+        while (r) {
+            if ((r/b)%10 == 6) {
+                ans = (num/b + 3) * b + r%b;
+                break;
+            }
+            r %= b;
+            b /= 10;
+        }
+        return ans;
+    }
+};
+```
