update LeetCode Weekly Contest 464

--- a/algorithm/LeetCode/[Hard] 1172. Dinner Plate Stacks.md
+++ b/algorithm/LeetCode/[Hard] 1172. Dinner Plate Stacks.md
@@ -233,77 +233,66 @@ class DinnerPlates:
 
 **Solution 3: (Heap)**
 ```
-Runtime: 1988 ms
-Memory Usage: 468.1 MB
+Runtime: 114 ms, Beats 96.82%
+Memory: 218.13 MB, Beats 96.18%
 ```
 ```c++
 class DinnerPlates {
-    // The trick is to quickly figure a way for leftmost vacant stack,
-    // meanwhile the rightmost non-empty stack is alway at the back of the stack vector.
-    // Data structure: 
-    //   - use a list of stacks to store all dinner plate stacks; 
-    //   - and a min heap (priority queue) to track vacant stack indices.
-    
-    int cap;  // capacity
-    vector<stack<int>> stacks;
-    priority_queue<int, vector<int>, ::greater<int>> vacants_left; // min heap to track the index of the vacant stacks 
-    
+    vector<vector<int>> dp;
+    priority_queue<int, vector<int>, greater<>> pq; 
+    int n;
 public:
-    DinnerPlates(int capacity)
-    : cap(capacity)
-    {
-        vacants_left.push(0); // 0 index to start with
-        stacks.push_back({});
+    DinnerPlates(int capacity) {
+        n = capacity;
     }
     
     void push(int val) {
-        // Clean up invalid vacant stack indices 
-        while(!vacants_left.empty() && vacants_left.top() >= stacks.size())
-            vacants_left.pop();
-
-        // Check if we need to add a new stack or not
-        if (vacants_left.empty())        
-        {
-            stacks.push_back({});
-            vacants_left.push(stacks.size() - 1);
+        while (pq.size() && pq.top() >= dp.size()) {
+            pq.pop();
         }
-        
-        int idx = vacants_left.top(); 
-        while(!vacants_left.empty() && vacants_left.top() == idx)
-            // We remove all the duplicates here, because popAtStack() blindly push as if a new vacant stack each time.
-            vacants_left.pop();  // We will push back in conditionally
-
-        stacks[idx].push(val);
-        if (stacks[idx].size() < cap)
-            vacants_left.push(idx);
+        if (pq.size()) {
+            auto x = pq.top();
+            pq.pop();
+            dp[x].push_back(val);
+        } else {
+            if (dp.size() == 0 || dp.back().size() == n) {
+                dp.push_back({});
+            }
+            dp.back().push_back(val);
+        }
     }
     
     int pop() {
-        if (stacks.empty())
+        if (dp.size() == 0) {
             return -1;
-        
-        // the rightmost non-empty stack is always at the back of vector.
-        int ans = stacks.back().top();
-        stacks.back().pop();
-        while (!stacks.empty() && stacks.back().empty())
-            stacks.pop_back(); // clean up empty stacks at the back of vector.
-        
-        return ans;
+        }
+        auto rst = dp.back().back();
+        dp.back().pop_back();
+        while (dp.size() && dp.back().size() == 0) {
+            dp.pop_back();
+        }
+        while (pq.size() && pq.top() >= dp.size()) {
+            pq.pop();
+        }
+        return rst;
     }
     
     int popAtStack(int index) {
-        // index validity check
-        if (index >= stacks.size() || stacks[index].empty())
+        if (index >= dp.size() || dp[index].size() == 0) {
             return -1;
-        
-        int ans = stacks[index].top();
-        stacks[index].pop();
-
-        while (!stacks.empty() && stacks.back().empty()) 
-            stacks.pop_back();  // same idea as pop(), every time we pop, we clean up all empty stacks at the back.
-
-        vacants_left.push(index); // we allow duplicates (will be handled in push); this index is pused in as a new vacant stack;        
-        return ans;
+        }
+        int rst = dp[index].back();
+        dp[index].pop_back();
+        while (dp.size() && dp.back().size() == 0) {
+            dp.pop_back();
+        }
+        while (pq.size() && pq.top() >= dp.size()) {
+            pq.pop();
+        }
+        if (index < dp.size()) {
+            pq.push(index);
+        }
+        return rst;
     }
 };
 
