--- a/algorithm/LeetCode/[Hard] 1263. Minimum Moves to Move a Box to Their Target Location.md
+++ b/algorithm/LeetCode/[Hard] 1263. Minimum Moves to Move a Box to Their Target Location.md
@@ -124,3 +124,75 @@ class Solution:
                     return res
         return -1
 ```
+
+**Solution 2: (BFS, 2 BFS)**
+```
+Runtime: 47 ms. Beats 57.80%
+Memory: 40.70 MB, Beats 20.18%
+```
+```c++
+class Solution {
+    int dd[5] = {0, 1, 0, -1, 0};
+    bool check(int tx, int ty, int sx, int sy, int bx, int by, vector<vector<char>> &grid) {
+            int m = grid.size(), n = grid[0].size(), nx, ny, d;
+            vector<vector<int>> visited(m, vector<int>(n));
+            queue<array<int,2>> q;
+            q.push({sx, sy});
+            visited[sx][sy] = 1;
+            while (q.size()) {
+                auto [x, y] = q.front();
+                q.pop();
+                if (x == tx && y == ty) {
+                    return true;
+                }
+                for (d = 0; d < 4; d ++) {
+                    nx = x + dd[d];
+                    ny = y + dd[d+1];
+                    if (0 <= nx && nx < m && 0 <= ny && ny < n && grid[nx][ny] != '#' && !visited[nx][ny] && !(nx == bx && ny == by)) {
+                        q.push({nx, ny});
+                        visited[nx][ny] = 1;
+                    }
+                }
+            }
+            return false;
+        };
+public:
+    int minPushBox(vector<vector<char>>& grid) {
+        int m = grid.size(), n = grid[0].size(), i, j, d, nbx, nby, pbx, pby, nx, ny, ans = 0;
+        array<int,2> player, box, target;
+        queue<array<int,5>> q;
+        int visited[20][20][20][20] = {0};
+        for (i = 0; i < m; i ++) {
+            for (j = 0; j < n; j ++) {
+                if (grid[i][j] == 'S') {
+                    player = {i, j};
+                } else if (grid[i][j] == 'B') {
+                    box = {i, j};
+                } else if (grid[i][j] == 'T') {
+                    target = {i, j};
+                }
+            }
+        }
+        q.push({box[0], box[1], player[0], player[1], 0});
+        visited[box[0]][box[1]][player[0]][player[1]] = 1;
+        while (q.size()) {
+            auto [bx, by, sx, sy, s] = q.front();
+            q.pop();
+            if (bx == target[0] && by == target[1]) {
+                return s;
+            }
+            for (d = 0; d < 4; d ++) {
+                nbx = bx + dd[d];
+                nby = by + dd[d+1];
+                pbx = bx - dd[d];
+                pby = by - dd[d+1];
+                if (0 <= nbx && nbx < m && 0 <= nby && nby < n && 0 <= pbx && pbx < m && 0 <= pby && pby < n && grid[nbx][nby] != '#' && grid[pbx][pby] != '#' && check(pbx, pby, sx, sy, bx, by, grid) && visited[nbx][nby][bx][by] == 0) {
+                    q.push({nbx, nby, bx, by, s+1});
+                    visited[nbx][nby][bx][by] = 1;
+                }
+            }
+        }
+        return -1;
+    }
+};
+```
