--- a/algorithm/LeetCode/[Hard] 1368. Minimum Cost to Make at Least One Valid Path in a Grid.md
+++ b/algorithm/LeetCode/[Hard] 1368. Minimum Cost to Make at Least One Valid Path in a Grid.md
@@ -417,3 +417,53 @@ public:
     }
 };
 ```
+
+**Solution 2: (BFS, next level buffered)**
+```
+Runtime: 14 ms, Beats 78.15%
+Memory: 21.80 MB, Beats 55.78%
+```
+```c++
+class Solution {
+    int dd[4][2] = {{0, 1}, {0, -1}, {1, 0}, {-1, 0}};
+public:
+    int minCost(vector<vector<int>>& grid) {
+        int m = grid.size(), n = grid[0].size(), d, ni, nj;
+        queue<array<int,3>> q, q2;
+        vector<vector<int>> visited(m, vector<int>(n));
+        q.push({0, 0, 0});
+        visited[0][0] = 1;
+        while (q.size()) {
+            auto [i, j, s] = q.front();
+            q.pop();
+            if (i == m-1 && j == n-1) {
+                return s;
+            }
+            for (d = 0; d < 4; d ++) {
+                ni = i + dd[d][0];
+                nj = j + dd[d][1];
+                if (0 <= ni && ni < m && 0 <= nj && nj < n && !visited[ni][nj]) {
+                    if (d+1 == grid[i][j]) {
+                        q.push({ni, nj, s});
+                        visited[ni][nj] = 1;
+                    } else {
+                        q2.push({ni, nj, s+1});
+                    }
+                }
+                
+            }
+            if (q.size() == 0) {
+                while (q2.size()) {
+                    auto [i, j, s] = q2.front();
+                    q2.pop();
+                    if (!visited[i][j]) {
+                        q.push({i, j, s});
+                        visited[i][j] = 1;
+                    }
+                }
+            }
+        }
+        return -1;
+    }
+};
+```
