--- a/algorithm/LeetCode/[Hard] 1383. Maximum Performance of a Team.md
+++ b/algorithm/LeetCode/[Hard] 1383. Maximum Performance of a Team.md
@@ -70,45 +70,34 @@ class Solution:
         return perf % modulo
 ```
 
-**Solution 2: (Heap)**
+**Solution 2: (Heap, Sort, sort by efficiency and greey over max speed sum)**
 ```
-Runtime: 238 ms
-Memory Usage: 36.9 MB
+Runtime: 11 ms, Beats 99.09%
+Memory: 39.39 MB, Beats 96.06%
 ```
 ```c++
 class Solution {
-    const int mod = (int)1e9 + 7;
 public:
     int maxPerformance(int n, vector<int>& speed, vector<int>& efficiency, int k) {
-      // to maintain the heap of size k we will use priority queue
-      priority_queue<int, vector<int>, greater<int>> pq;
-      // to store the pair of efficiency and speed
-      vector<pair<int, int>> v;
-      for (int i = 0; i < n; i++){
-        v.push_back({efficiency[i], speed[i]});
-      }
-	  // sort in decreasing order of efficiency
-      sort(v.rbegin(), v.rend()); 
-	  // totSpeed is the sum of speed of k engineers
-      long totSpeed = 0, ans = 0;
-	  // iterate over all engineers
-      for (int i = 0; i < n; i++) {
-        int currEff = v[i].first;
-        int currSpeed = v[i].second;
-		// if the size of pq is k
-        if (pq.size() == k) {
-		  // remove the minimum speed from the pq
-          totSpeed -= pq.top();
-          pq.pop();
+        int i, MOD = 1e9 + 7;
+        long long a = 0, ans = 0;
+        vector<array<int,2>> dp(n);
+        priority_queue<int, vector<int>, greater<>> pq;
+        for (i = 0; i < n; i ++) {
+            dp[i] = {efficiency[i], speed[i]};
         }
-		// push the current speed in the pq
-        pq.push(currSpeed); 
-		// add the current speed to the totSpeed
-        totSpeed += currSpeed; 
-		// update the ans
-        ans = max(ans, totSpeed * currEff); 
-      }
-      return ans % mod;
+        sort(dp.begin(), dp.end());
+        for (i = n-1; i >= 0; i --) {
+            a += dp[i][1];
+            pq.push(dp[i][1]);
+            ans = max(ans, a * dp[i][0]);
+            if (pq.size() == k) {
+                auto b = pq.top();
+                a -= b;
+                pq.pop();
+            }
+        }
+        return ans % MOD;
     }
 };
 ```
