--- a/algorithm/LeetCode/[Hard] 1425. Constrained Subset Sum.md
+++ b/algorithm/LeetCode/[Hard] 1425. Constrained Subset Sum.md
@@ -144,23 +144,29 @@ class Solution:
 
 **Solution 4: (Heap)**
 ```
-Runtime: 267 ms
-Memory: 139.7 MB
+Runtime: 222 ms, Beats 15.53%
+Memory: 133.00 MB, Beats 52.69%
 ```
 ```c++
 class Solution {
 public:
     int constrainedSubsetSum(vector<int>& nums, int k) {
-        priority_queue<pair<int,int>> pq;
-        int ans = INT_MIN;
-        for (int i = 0; i < nums.size(); i++)
-        {
-            while (!pq.empty() && pq.top().second < i-k)
+        int n = nums.size(), i, ans = INT_MIN;
+        priority_queue<array<int,2>> pq;
+        for (i = n-1; i >= 0; i --) {
+            while (pq.size() && (pq.top()[0] <= 0 || pq.top()[1] - i > k)) {
                 pq.pop();
-            if (!pq.empty())
-                nums[i] = max(nums[i], nums[i]+pq.top().first);
-            ans = max(ans, nums[i]);
-            pq.push({nums[i] , i});
+            }
+            if (pq.size()) {
+                auto [a, _] = pq.top();
+                if (nums[i] >= 0) {
+                    pq.pop();
+                }
+                pq.push({nums[i] + a, i});
+            } else {
+                pq.push({nums[i], i});
+            }
+            ans = max(ans, pq.top()[0]);
         }
         return ans;
     }
