--- a/algorithm/LeetCode/[Hard] 1439. Find the Kth Smallest Sum of a Matrix With Sorted Rows.md
+++ b/algorithm/LeetCode/[Hard] 1439. Find the Kth Smallest Sum of a Matrix With Sorted Rows.md
@@ -58,3 +58,42 @@ class Solution:
             h = sorted([i+j for i in row for j in h])[:k]
         return h[k-1]
 ```
+
+**Solution 2: (Heap)**
+```
+Runtime: 113 ms, Beats 41.19%
+Memory: 47.80 MB, Beats 36.36%
+```
+```c++
+class Solution {
+public:
+    int kthSmallest(vector<vector<int>>& mat, int k) {
+        int m = mat.size(), n = mat[0].size(), i, j, a = 0, ans = 0;
+        vector<int> pre(m);
+        priority_queue<pair<int,vector<int>>, vector<pair<int,vector<int>>>, greater<>> pq;
+        set<vector<int>> st;
+        for (i = 0; i < m; i ++) {
+            a += mat[i][0];
+        }
+        pq.push({a, pre});
+        st.insert(pre);
+        while (k > 1) {
+            auto [b, arr] = pq.top();
+            pq.pop();
+            for (i = 0; i < m; i ++) {
+                j = arr[i];
+                if (j + 1 < n) {
+                    arr[i] += 1;
+                    if (!st.count(arr)) {
+                        pq.push({b - mat[i][j] + mat[i][j+1], arr});
+                        st.insert(arr);
+                    }
+                    arr[i] -= 1;
+                }
+            }
+            k -= 1;
+        }
+        return pq.top().first;
+    }
+};
+```
