--- a/algorithm/LeetCode/[Hard] 1675. Minimize Deviation in Array.md
+++ b/algorithm/LeetCode/[Hard] 1675. Minimize Deviation in Array.md
@@ -207,3 +207,35 @@ public:
     }
 };
 ```
+
+**Solution 5: (Greedy, Sort, translate problem set to one direction)**
+```
+Runtime: 178 ms, Beats 91.05%
+Memory: 92.96 MB, Beats 9.57%
+```
+```c++
+class Solution {
+public:
+    int minimumDeviation(vector<int>& nums) {
+        int ans = INT_MAX;
+        set<int> st;
+        for (auto &num: nums) {
+            if (num%2) {
+                st.insert(2*num);
+            } else {
+                st.insert(num);
+            }
+        }
+        while (1) {
+            auto it = prev(st.end());
+            ans = min(ans, *it - *st.begin());
+            if (*it%2) {
+                break;
+            }
+            st.insert((*it)/2);
+            st.erase(it);
+        }
+        return ans;
+    }
+};
+```
