--- a/algorithm/LeetCode/[Hard] 3197. Find the Minimum Area to Cover All Ones II.md
+++ b/algorithm/LeetCode/[Hard] 3197. Find the Minimum Area to Cover All Ones II.md
@@ -193,3 +193,98 @@ public:
     }
 };
 ```
+
+**Solution 2: (Enumeration, Brute Force)**
+
+    ---       ---       ---
+   |   |     | | |     |   |
+    ---       - -       ---
+   |   |     |   |     | | |
+    ---       ---       - -
+   |   |   
+    ---
+
+    --- --- ---      --- ---      --- ---
+   |   |   |   |    |---|   |    |   |---|
+    --- --- ---      --- ---      --- ---
+
+```
+Runtime: 99 ms, Beats 26.39%
+Memory: 25.78 MB, Beats 22.22%
+```
+```c++
+class Solution {
+    int check2(vector<vector<int>> &grid, int up, int down, int left, int right) {
+        int left_x = INT_MAX, left_y = INT_MAX, right_x = -1, right_y = -1;
+        for (int i = up; i <= down; i ++) {
+            for (int j = left; j <= right; j ++) {
+                if (grid[i][j]) {
+                    left_x = min(left_x, i);
+                    right_x = max(right_x, i);
+                    left_y = min(left_y, j);
+                    right_y = max(right_y, j);
+                }
+            }
+        }
+        return (left_x <= right_x) ? (right_x - left_x + 1) * (right_y - left_y + 1) : INT_MAX / 3;
+    }
+    int check(vector<vector<int>> &grid) {
+        int m = grid.size(), n = grid[0].size(), i, j, rst = m * n;
+        /*
+            --- <x
+            --- <i 
+            --- <j
+            ---
+            ^y
+        */
+        for (i = 0; i < m-2; i ++) {
+            for (j = i+1; j < m-1; j ++) {
+                rst = min(rst, check2(grid, 0, i, 0, n-1)
+                                + check2(grid, i+1, j, 0, n-1)
+                                + check2(grid, j+1, m-1, 0, n-1));
+
+            }
+        }
+        /*
+            ---      ---
+             |       --- <i
+            --- <i    |
+            ---      ---
+                      ^j
+        */
+        for (i = 0; i < m-1; i ++) {
+            for (j = 0; j < n-1; j ++) {
+                rst = min(rst, check2(grid, 0, i, 0, j)
+                                + check2(grid, 0, i, j+1, n-1)
+                                + check2(grid, i+1, m-1, 0, n-1));
+                rst = min(rst, check2(grid, 0, i, 0, n-1)
+                                + check2(grid, i+1, m-1, 0, j)
+                                + check2(grid, i+1, m-1, j+1, n-1));
+            }
+        }
+        return rst;
+    }
+
+    /*
+    i>  . x(0,1) 
+        . .    ->    . . .
+        . .          . . x(1,2) <j
+        ^j                ^i
+    */
+    vector<vector<int>> rotate(vector<vector<int>> &grid) {
+        int m = grid.size(), n = grid[0].size();
+        vector<vector<int>> rst(n, vector<int>(m));
+        for (int i = 0; i < m; i ++) {
+            for (int j = 0; j < n; j ++) {
+                rst[j][m-1-i] = grid[i][j];
+            }
+        }
+        return rst;
+    }
+public:
+    int minimumSum(vector<vector<int>>& grid) {
+        vector<vector<int>> rgrid = move(rotate(grid));
+        return min(check(grid), check(rgrid));
+    }
+};
+```
