--- a/algorithm/LeetCode/[Hard] 1499. Max Value of Equation.md
+++ b/algorithm/LeetCode/[Hard] 1499. Max Value of Equation.md
@@ -102,3 +102,28 @@ public:
     }
 };
 ```
+
+**Solution 4: (Math, Heap)**
+```
+Runtime: 7 ms, Beats 85.24%
+Memory: 96.66 MB, Beats 29.26%
+```
+```c++
+class Solution {
+public:
+    int findMaxValueOfEquation(vector<vector<int>>& points, int k) {
+        int n = points.size(), i, ans = INT_MIN;
+        priority_queue<array<int,2>> pq;
+        for (i = 0; i < n; i ++) {
+            while (pq.size() && points[i][0] - pq.top()[1] > k) {
+                pq.pop();
+            }
+            if (pq.size()) {
+                ans = max(ans, pq.top()[0] + points[i][0] + points[i][1]);
+            }
+            pq.push({points[i][1] - points[i][0], points[i][0]});
+        }
+        return ans;
+    }
+};
+```
