--- a/algorithm/LeetCode/[Hard] 1687. Delivering Boxes from Storage to Ports.md
+++ b/algorithm/LeetCode/[Hard] 1687. Delivering Boxes from Storage to Ports.md
@@ -70,7 +70,7 @@ So the total number of trips is 2 + 2 + 2 + 2 + 3 + 3 = 14.
 
 * `1 <= boxes.length <= 105`
 * `1 <= portsCount, maxBoxes, maxWeight <= 105`
-* `1 <= ports​​i <= portsCount`
+* `1 <= ports <= portsCount`
 * `1 <= weightsi <= maxWeight`
 
 # Submissions
@@ -135,4 +135,53 @@ class Solution:
             if boxes[i][0] != boxes[i+1][0]: base_trip += 1
 
         return base_trip + que[-1][1]
+```
+
+**Solution 3: (Sliding Window, Greedy, DP)**
+    
+
+             vi         vj        
+    [[2,4],[2,5],[3,1],[3,2],[3,7],[3,1],[4,4],[1,3],[5,2]], maxBoxes = 5, maxWeight = 7
+     -----  ---------- -----
+cnt    2        3        2x
+
+need   1      1     2    2     1     1     2     2      2
+dp     0      2     4    5     7     8          11           14
+                         6   
+     -----  ----  ----------  ----  ----------  -----------
+cnt    2     2        2        2        3           3
+
+
+```
+Runtime: 28 ms, Beats 32.95%
+Memory: 145.18 MB, Beats 88.64%
+```
+```c++
+class Solution {
+public:
+    int boxDelivering(vector<vector<int>>& boxes, int portsCount, int maxBoxes, int maxWeight) {
+        int n = boxes.size(), need = 0, j = 0, lastj = 0;
+        vector<int> dp(n + 1, 200000);
+        dp[0] = 0;
+        for (int i = 0; i < n; ++i) {
+            while (j < n && maxBoxes > 0 && maxWeight >= boxes[j][1]) {
+                maxBoxes -= 1;
+                maxWeight -= boxes[j][1];
+                if (j == 0 || boxes[j][0] != boxes[j - 1][0]) {
+                    lastj = j;
+                    need++;
+                }
+                j++;
+            }
+            dp[j] = min(dp[j], dp[i] + need + 1);
+            dp[lastj] = min(dp[lastj], dp[i] + need);
+            maxBoxes += 1;
+            maxWeight += boxes[i][1];
+            if (i == n - 1 || boxes[i][0] != boxes[i + 1][0]) {
+                need--;
+            }
+        }
+        return dp[n];
+    }
+};
 ```
